# NLP-from-scratch-to-BERT

./: .gitignore  README.md  main.py  pyproject.toml  verify_env.py
Solutions/: TP1_Pretraitement.ipynb  TP2_BOW_TFIDF.ipynb  TP3_Word2Vec_FastText.ipynb  TP4_BERT.ipynb
