[project]
name = "tp-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "gensim>=4.4.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pip>=26.0.1",
    "pypdf>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
